--- a/SLOTGAMES_WEB/pom.xml
+++ b/SLOTGAMES_WEB/pom.xml
@@ -76,15 +76,36 @@
 <artifactId>cucumber-extentsreport</artifactId>
 <version>3.0.2</version>
 </dependency>
+
 <dependency>
     <groupId>net.sourceforge.tess4j</groupId>
     <artifactId>tess4j</artifactId>
     <version>4.2.1</version>
 </dependency>
+
 <dependency>
     <groupId>com.asprise.ocr</groupId>
     <artifactId>java-ocr-api</artifactId>
     <version>[15,)</version>
 </dependency>
+
+<dependency>
+    <groupId>org.bytedeco</groupId>
+    <artifactId>javacpp</artifactId>
+    <version>1.4</version>
+</dependency>
+
+<dependency>
+    <groupId>org.bytedeco</groupId>
+    <artifactId>openblas-platform</artifactId>
+    <version>0.3.7-1.5.2</version>
+</dependency>
+
+<dependency>
+    <groupId>org.bytedeco</groupId>
+    <artifactId>opencv-platform</artifactId>
+    <version>4.1.2-1.5.2</version>
+</dependency>
+
   </dependencies>
 </project>
